# ufcity-edge-module

./: CMakeLists.txt  README.md  _config.yml  native-lib.cpp  ufcity_interface.cpp  ufcity_interface.h
client_demo/: example1.h  example2.h  example3.h  json_data_sample.cpp  json_data_sample.hpp  main.cpp  menu.h
client_demo/ext/: cod_for_text.cpp  example3_json.h  json_data_sample.hpp  observer_client.h  publish.cpp  publish.h
communcation/communication_interface/: communication_interface.cpp  communication_interface.h  mqtt_publish.h  mqtt_subscribe.h
communcation/lib/: mqtt_settings.h
communcation/message_receiver/: message_receiver.cpp  message_receiver.h
communcation/message_sender/: message_sender.cpp  message_sender.h
communication/communication_interface/: mqtt_publish.h  mqtt_subscribe.h
communication/lib/: mqtt_settings.h
communication/message_receiver/: message_receiver.cpp  message_receiver.h
communication/message_sender/: message_sender.cpp  message_sender.h
error/: error_list.h
in_memory_storage/: message_queue.cpp  message_queue.h
in_memory_storage/buffer/: buffer.cpp  buffer.h
in_memory_storage/common/: fog_node_address.cpp  fog_node_address.h
in_memory_storage/device_data/: device_data.cpp  device_data.h  location.cpp  location.h
in_memory_storage/observer/: observer_client.cpp  observer_client.h
in_memory_storage/resources_map/: resources_map.cpp  resources_map.h
in_memory_storage/spatial_context_data/: spatial_context_data.cpp  spatial_context_data.h
message_receiver/: message_receiver.cpp  message_receiver.h
message_sender/: message_sender.cpp  message_sender.h
model/: device.cpp  device.h  discovered_resource_model.cpp  discovered_resource_model.h  location.cpp  location.h  location_model.cpp  location_model.h  message.cpp  message.h  resource.cpp  resource.h  service.cpp  service.h  service_data.cpp  service_data.h
model/config/: config.cpp  config.h  data_aggregation_config.cpp  data_aggregation_config.h  data_grouping_config.cpp  data_grouping_config.h  methods.h  missing_data_config.cpp  missing_data_config.h  remove_outliers_config.cpp  remove_outliers_config.h
model/observer/: observer.h  subject.h
north_interface/: north_interface.cpp  north_interface.h
observer/: observer.h  subject.h  ufcity_observer.cpp  ufcity_observer.h
orchestrator/: orchestrator.cpp  orchestrator.h
parser/: parserJSON.cpp  parserJSON.h  parser_json.cpp  parser_json.h
parser/lib/: json.hpp
pre_pocessing/: pre_processing.cpp  pre_processing.h
pre_processing/: pre_processing.cpp  pre_processing.h
processing/: data_aggregation.cpp  data_aggregation.h  missing_data.cpp  missing_data.h  processing.cpp  processing.h  remove_outliers.cpp  remove_outliers.h
resources_map/: resources_map.cpp  resources_map.h
security/: security.cpp  security.h
semantic_annotation/: semantic_annotation.cpp  semantic_annotation.h
spatial_context_data/: spatial_context_data.cpp  spatial_context_data.h
util/: util.cpp  util.h
